@@ -1,40 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE catmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<catmetadata>
-	<longdescription lang="en">
-		The net-www category contains various WWW clients that have not yet
-		moved into www- categories.
-	</longdescription>
-	<longdescription lang="de">
-		Die Kategorie net-www enthält verschiedene Programme, die noch nicht in
-		die www-Kategorien verschoben wurden.
-	</longdescription>
-	<longdescription lang="es">
-		La categoría net-www contiene varios clientes WWW que no han sido
-		movidos (aún) a categorías www-.
-	</longdescription>
-	<longdescription lang="ja">
-		net-wwwカテゴリーにはwww-カテゴリーに未だ移動していない
-		様々なワールド・ワイド・ウェブのクライアントが含まれています。
-	</longdescription>
-	<longdescription lang="nl">
-		De net-www categorie bevat verschillende WWW-clients die nog niet in andere
-		www- categorieen ingedeeld zijn.
-	</longdescription>
-	<longdescription lang="vi">
-		Nhóm net-www chứa các client WWW chưa được chuyển vào các nhóm www-.
-	</longdescription>
-	<longdescription lang="it">
-		La categoria net-www contiene cari client WWW che non sono ancora stati
-		spostati in altre categorie www-.
-	</longdescription>
-	<longdescription lang="pt">
-		A categoria net-www contém vários clientes de WWW que ainda não
-		foram movidos para categorias www-.
-	</longdescription>
-	<longdescription lang="pl">
-		Kategoria net-www zawiera przeglądarki WWW, których jeszcze nie
-		przeniesiono do kategorii www-.
-	</longdescription>
-</catmetadata>
-
