@@ -1,13 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2647 2009/05/12 15:15:24 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2648 2009/05/12 15:24:06 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
 
-  12 May 2009; Ulrich Mueller <ulm@gentoo.org> package.mask:
+  12 May 2009; Ulrich Mueller <ulm@gentoo.org> categories, package.mask:
   Remove mask for net-www/adobesvg; package has been removed, bug 265066.
+  Remove empty net-www category, its packages are now in www-* categories.
 
   12 May 2009; Peter Alfredsen <loki_val@gentoo.org> package.mask:
   Add mask for poppler-0.11* in preparation for it entering the tree.
